--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,52 @@
 main {
   height: 100%;
+  background-color: #3f51b5;
 }
 
 mat-form-field {
-  width: 300px;
+  margin: 1rem 0;
+  width: 350px;
 }
 
 h1 {
   text-align: center;
+  font-size: 2.5rem;
+  font-weight: lighter;
+}
+
+.app {
+  background-color: #fff;
+  margin: 4rem 0;
+  border-radius: 4px;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  align-items: center;
+  height: 800px;
+  min-width: 350px;
+  width: 50%;
+  max-width: 400px;
+}
+
+@media(min-width: 400px) {
+  .app {padding: 2rem 4rem;}
+}
+
+.weather-results {
+  margin: 1.5rem 0;
+  width: 350px;
+}
+
+mat-spinner {
+  margin-top: 2rem;
+}
+
+.row {
+  display: flex;
+  margin: 10px 0;
+  justify-content: space-between;
+
+  &__label {
+    font-weight: bold;
+  }
 }
